Bug 1308113 - Account for letter- and word-spacing when resolving tab-size <number>. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D117331